--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -76,7 +76,7 @@ jobs:
 
     - name: build appsrv docker image
       run: |
-        docker build --file appsrv/Dockerfile.jvm appsrv --tag ${{ env.REGISTRY }}/${{ https://weissengruberNina/leoloud }}-appsrv
+        docker build --file appsrv/Dockerfile.jvm appsrv --tag ${{ env.REGISTRY }}/${{ weissengruberNina }}-appsrv
       working-directory: distribution/${{ env.DISTRIBUTION_FOLDER }}        
 
     - name: Log in to the Container registry
