--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -71,12 +71,12 @@ jobs:
       run: |
         pwd
         ls -l
-        docker build nginx --tag ${{ env.REGISTRY }}/${{ github.repository }}-nginx
+        docker build nginx --tag ${{ env.REGISTRY }}/weissengruberNina-nginx
       working-directory: distribution/${{ env.DISTRIBUTION_FOLDER }}
 
     - name: build appsrv docker image
       run: |
-        docker build --file appsrv/Dockerfile.jvm appsrv --tag ${{ env.REGISTRY }}/${{ weissengruberNina }}-appsrv
+        docker build --file appsrv/Dockerfile.jvm appsrv --tag ${{ env.REGISTRY }}/weissengruberNina-appsrv
       working-directory: distribution/${{ env.DISTRIBUTION_FOLDER }}        
 
     - name: Log in to the Container registry
@@ -88,11 +88,11 @@ jobs:
 
     - name: push appsrv docker image
       run: |
-        docker push ${{ env.REGISTRY }}/${{ github.repository }}-appsrv
+        docker push ${{ env.REGISTRY }}/weissengruberNina-appsrv
       working-directory: distribution/${{ env.DISTRIBUTION_FOLDER }}        
     - name: push nginx docker image
       run: |
-        docker push ${{ env.REGISTRY }}/${{ github.repository }}-nginx
+        docker push ${{ env.REGISTRY }}/weissengruberNina-nginx
       working-directory: distribution/${{ env.DISTRIBUTION_FOLDER }}        
 
     - name: install ssh key
@@ -104,7 +104,7 @@ jobs:
         alias: server
 
     - name: convert github repository name to lowercase
-      run: echo "IMAGE_REPOSITORY=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+      run: echo "IMAGE_REPOSITORY=$(echo weissengruberNina | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
     - name: enable ssh login for debugging...
       uses: mxschmitt/action-tmate@v3
